# npower-app

./: '  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  somelib.cpp  somelib.hpp
cmake/: CPMdependencies.cmake
forms/: AboutForm.qml  AboutForm.ui.qml  BatteryIndicatorForm.ui.qml  ChallengeAForm.ui.qml  ChallengeBForm.ui.qml  ChallengeCForm.ui.qml  ChallengeForm.qml  ChallengeForm.ui.qml  ChallengeInfoForm.ui.qml  ChallengeSelection.qml  ChallengeSelectionForm.ui.qml  HighScores.qml  HighScoresButton.qml  LeaderboardForm.qml  LeaderboardForm.ui.qml  LeaderboardTable.qml  SaveButton.qml  SelectButton.qml  StartButton.qml  main.qml  qml.qrc
include/: backend.hpp  fake_sensors.hpp
src/: backend.cpp  backend_battery_monitor.cpp  backend_challenge.cpp  backend_controller.cpp  backend_leaderboard.cpp  fake_sensors.cpp  main.cpp
